# semantic_ethical_glass_box

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yaml  mkdocs.yml  prefixes.json  pyproject.toml
apps/backend/: Dockerfile  README.md
apps/frontend/: Dockerfile  README.md
docs/: deployment_centralized.md  index.md  monorepo_structure.md  semantic_log_generator_installation.md  semantic_log_generator_real_world_integration.md  semantic_log_generator_usage.md  ttl_generation_internals.md  web_observability.md
docs/backend/: shared-context.md  shared_context.md
docs/deployment/: centralized.md
docs/getting-started/: core-concepts-and-roles.md  quickstart.md  segb-features.md  segb-in-two-minutes.md
docs/guides/: explore-the-web-ui.md  publish-your-first-log.md  ros4hri-integration.md  shared-context-workflow.md  validation-checklist.md
docs/internals/: ttl-generation.md
docs/operations/: authentication-and-jwt.md  centralized-deployment.md  observability-and-reset.md  web-observability.md
docs/package/: api-reference.md  index.md  installation.md  ros4hri-integration.md  usage.md
docs/reference/: api-and-roles.md  monorepo-structure.md  ontology.md  (+1 more)
eval/: README.md  aggregate.py  bench_query.py  bench_single.py  capture.json  capture_proxy.py  collect_results_multi_robot_experiment.sh  inspect_capture.py  kg_stats.py  launch_multi_robot_experiment.sh  network_baseline.py  robot_agent.py  test.ttl
examples/: README.md  __init__.py
results/: run_metadata.txt  unittest_uc03_uc05.txt
tests/: README.md
(+149 files in other folders)
